scripts/local-kub/aircraft.yaml
#
# To deploy:
#
# kubectl apply -f scripts/deploy.yaml
#
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aircraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aircraft
  template:
    metadata:
      labels:
        app: aircraft
    spec:
      containers: 
      - name: aircraft
        image: aircraft:1
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: aircraft
spec:
  selector:
    app: aircraft
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
