scripts/local-kub/booking.yaml
#
# To deploy:
#
# kubectl apply -f scripts/deploy.yaml
#
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking
  template:
    metadata:
      labels:
        app: booking
    spec:
      containers: 
      - name: booking
        image: booking:1
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: booking
spec:
  selector:
    app: booking
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
