scripts/local-kub/chatbot.yaml
#
# To deploy:
#
# kubectl apply -f scripts/deploy.yaml
#
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot
  template:
    metadata:
      labels:
        app: chatbot
    spec:
      containers: 
      - name: chatbot
        image: chatbot:1
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: chatbot
spec:
  selector:
    app: chatbot
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
