scripts/local-kub/flight.yaml
#
# To deploy:
#
# kubectl apply -f scripts/deploy.yaml
#
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flight
  template:
    metadata:
      labels:
        app: flight
    spec:
      containers: 
      - name: flight
        image: flight:1
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: flight
spec:
  selector:
    app: flight
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
