scripts/local-kub/recommend.yaml
#
# To deploy:
#
# kubectl apply -f scripts/deploy.yaml
#
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommend
  template:
    metadata:
      labels:
        app: recommend
    spec:
      containers: 
      - name: recommend
        image: recommend:1
        imagePullPolicy: Never

---
apiVersion: v1
kind: Service
metadata:
  name: recommend
spec:
  selector:
    app: recommend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
